--- a/package.json
+++ b/package.json
@@ -1,28 +1,22 @@
 {
   "name": "Welcome-Bot",
   "version": "1.0.0",
-  "description": "welcome bot with custom tags used",
+  "description": "A Discord bot with custom welcome features.",
   "main": "index.js",
   "scripts": {
-    "test": "Thanks for using"
+    "start": "npm i && node index.js",
+    "test": "echo \"No tests specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "Atreya#2401",
-  "license": "Apache License 2.0",
+  "keywords": ["discord", "bot", "welcome"],
+  "author": "netizenakii (forked from Atreya#2401)",
+  "license": "Apache-2.0",
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.68",
     "ascii-table": "0.0.9",
-    "canvas": "^2.8.0",
-    "canvas-constructor": "^4.1.0",
-    "canvas-senpai": "^2.0.3",
-    "discord-button-pages": "^1.1.9",
-    "discord-buttons": "^4.0.0",
-    "discord-embeds-pages-buttons": "^1.3.0",
     "discord.js": "^12.5.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "image-cord": "^1.0.3",
-    "moment": "^2.29.1",
-    "node-fetch": "^2.6.1",
-    "quick.db": "^7.1.3"
+    "mongoose": "^8.12.2",
+    "node-fetch": "^2.6.1"
   }
 }
